base/wiki.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiki-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wiki
  template:
    metadata:
      labels:
        app: wiki
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: wiki
          image: kpryu/wiki-base:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: wiki-service # Ingress가 찾는 이름!
spec:
  selector:
    app: wiki
  ports:
    - port: 80
      targetPort: 80
