base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kpryu.cloud
      secretName: kpryu-cloud-tls # base/cert/certificates.yaml 의 와일드카드 인증서
  rules:
    - host: kpryu.cloud
      http:
        paths:
          # [순서 1] 위키를 먼저 가로챕니다.
          - path: /wiki
            pathType: Prefix
            backend:
              service:
                name: wiki-service
                port:
                  number: 80
          # [순서 2] 나머지는 전부 Hydejack으로 보냅니다.
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hydejack-service
                port:
                  number: 80
