base/wiki-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wiki-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - wiki.kpryu.cloud
      secretName: kpryu-cloud-tls # 와일드카드 인증서 재사용
  rules:
    - host: wiki.kpryu.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wiki-service
                port:
                  number: 80
